fixed pdf display